# openpiscis

./: .gitignore  BUILD.md  CHANGELOG.md  LICENSE  README.md  README_CN.md  index.html  package-lock.json  package.json  release_body.json  release_notes.md  vite.config.ts
.github/workflows/: ci.yml
docs/: architecture.md  chat-ui-protocol.md  openclaw-parity-matrix.md  openpisci-headless-cli.md  openpisci-swe-lite.md  openpiscis-headless-cli.md  openpiscis-swe-lite.md  piscis.chat.catalog.json
examples/user-tools/email/: README.md  index.ts  manifest.json
koi_debate_arc/: ml14_hybrid_causal.py
scripts/: smoke-test.ps1  upload-release-asset.ps1
scripts/bench_compression/: README.md  info_theory.py  run_bench.py
scripts/bench_compression/adapters/: common.py  piscis.py
scripts/bench_compression/results/: RESULTS.md  benchmark_results.json
scripts/bench_compression/samples/: _questions_cache.json  hard_01_multi_day_project.json  hard_02_schema_retry_chain.json  hard_03_tool_result_flood.json  hard_04_cross_session_recall.json  tool_01_bug_hunt.json  tool_02_data_pipeline.json  tool_03_browser_research.json
scripts/bench_swe_lite/: common.py  review_harness.py  run_swe_lite.py  score_swe_lite.py
scripts/bench_swe_lite/cases/: manifest.toml
src/: App.css  App.tsx  theme.css
src-tauri/: Cargo.toml  README.md  README_CN.md  build.rs  clippy.toml  tauri.conf.json
src-tauri/bench/: Cargo.toml
src-tauri/bench/src/: main.rs
src-tauri/capabilities/: default.json
src-tauri/pisci-cli/tests/: headless_cli.rs
src-tauri/pisci-core/: Cargo.toml
src-tauri/pisci-core/src/: heartbeat.rs  koi_prompt.rs  scene.rs
src-tauri/pisci-core/tests/: collab_trial.rs
src-tauri/pisci-kernel/: Cargo.toml
src-tauri/pisci-kernel/src/: lib.rs  proc.rs
src-tauri/pisci-kernel/src/agent/: loop_.rs  tool.rs
src-tauri/pisci-kernel/src/headless/: mod.rs
src-tauri/pisci-kernel/src/llm/: openai.rs
src-tauri/pisci-kernel/src/pool/: coordinator.rs  git.rs  koi_execute_todo.tmpl  services.rs  subagent.rs
src-tauri/pisci-kernel/src/store/: db.rs  settings.rs
src-tauri/pisci-kernel/src/tools/: code_run.rs  elevate.rs  mcp.rs  pdf.rs  process_control.rs  shell.rs  user_tool.rs
src-tauri/pisci-kernel/tests/: pool_services.rs
src-tauri/prompts/: koi_activate_for_messages.txt  koi_execute_todo.txt
src-tauri/src/: headless_cli.rs  host.rs  lib.rs  live_smoke.rs  notify.rs
src-tauri/src/app/: bootstrap.rs  headless.rs  logging.rs  shutdown.rs
src-tauri/src/browser/: download.rs
src-tauri/src/commands/: chat.rs  config.rs  ide.rs  journal.rs  mod.rs  platform.rs  pool.rs
src-tauri/src/commands/chat/: collab_trial.rs  curator.rs  debug.rs  gateway.rs  scheduler.rs  skill_review.rs
src-tauri/src/commands/config/: activity.rs  claude_plugins.rs  enterprise_capability.rs  mcp.rs  memory.rs  openai_skills.rs  scene.rs  settings.rs  skill_evolution.rs  skills.rs  tools.rs  user_tools.rs
src-tauri/src/commands/platform/: calibration.rs  system.rs  window.rs
src-tauri/src/commands/pool/: board.rs  koi.rs
src-tauri/src/fish/: mod.rs
src-tauri/src/gateway/: dingtalk.rs  wechat.rs  wecom.rs
src-tauri/src/lsp/: bridge.rs  manager.rs  mod.rs
src-tauri/src/pisci/: heartbeat.rs
src-tauri/src/piscis/: heartbeat.rs  mod.rs
src-tauri/src/pool/: bridge.rs  mod.rs  notice.rs
src-tauri/src/runtime/: ide_notify_hooks.rs  koi.rs  koi_prompt.rs
src-tauri/src/skills/: loader.rs  mod.rs  provenance.rs  service.rs
src-tauri/src/store/: mod.rs
src-tauri/src/tools/: app_control.rs  calibration.rs  call_fish.rs  chat_ui.rs  chat_ui_listen.rs  chat_ui_patch.rs  com_invoke.rs  com_tool.rs  desktop_automation.rs  im_channel.rs  im_send.rs  lsp.rs  mod.rs  office.rs  powershell.rs  read_lints.rs  skill_list.rs  skill_manage.rs  system_info.rs  wmi_tool.rs
src-tauri/src/tools/call_koi/: event_bus.rs  mod.rs  runtime.rs
src-tauri/src/tools/screen/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/tests/: pool_event_bridge.rs
src/components/: ConfirmDialog.tsx
src/components/About/: index.tsx
src/components/AuditLog/: index.tsx
src/components/Chat/: Chat.css  ComposerDropdown.tsx  InteractiveCard.css  InteractiveCard.tsx  SessionPicker.tsx  index.tsx
src/components/Chat/interactiveUi/: Blocks.tsx  ChoiceField.tsx  initValues.ts  protocol.ts  validate.ts  visibility.ts
src/components/Debug/: Debug.css  index.tsx
src/components/Fish/: index.tsx
src/components/Memory/: index.tsx
src/components/Overlay/: index.tsx
src/components/Pond/: index.tsx
src/components/Pond/Board/: Board.css  index.tsx
src/components/Pond/ChatPool/: ChatPool.css  index.tsx
src/components/Pond/Collab/: Collab.css  index.tsx
src/components/Pond/IDE/: AssistantPanel.tsx  CodeEditor.tsx  EditorTabs.tsx  FileTree.tsx  GitPanel.tsx  IDE.css  SearchPanel.tsx  Terminal.tsx  index.tsx  types.ts
src/components/Pond/KoiManager/: index.tsx
src/components/Pond/PisciInbox/: PisciInbox.css  index.tsx
src/components/Pond/PiscisInbox/: PiscisInbox.css  index.tsx
src/components/Pond/PoolMemberPicker/: PoolMemberPicker.css  index.tsx
src/components/Settings/: index.tsx
src/components/Skills/: index.tsx
src/components/Toaster/: Toaster.css  index.tsx
src/components/UserTools/: index.tsx
src/components/ui/: AppDropdown.css  AppDropdown.tsx
src/hooks/: useScrollPrependedHistory.ts
src/i18n/: en.ts  index.ts  zh.ts
src/services/tauri/: chat.ts  config.ts  ide.ts  lsp.ts  platform.ts  pool.ts
src/store/: index.ts
src/store/slices/: chat.ts  pool.ts
src/themes/: gold.css  violet.css
src/utils/: inboxRows.ts  inboxSessionLabel.ts  inputHistory.ts  poolMention.ts  session.ts  skillAdaptation.ts  skills.ts  toolDisplay.ts
